<resources>
    <string name="app_name">ZZF Boarding (II)</string>
    <string name="version">1.2.0</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_deployment">Register House</string>
    <string name="title_activity_main">ZFF Boarding System</string>
    <string name="title_activity_route">Select Route To Board</string>
    <!-- Strings related to login -->
    <string name="prompt_user_name">Operator ID</string>
    <string name="prompt_user_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_operator">This operator code is invalid</string>
    <string name="error_invalid_password">This operator key is too short</string>
    <string name="error_incorrect_password">This operator key is incorrect</string>

    <!-- Property Deployment Form -->
    <string name="prompt_existing_customer">Existing Customer</string>
    <string name="prompt_account_number">Account Number</string>
    <string name="prompt_has_meter">Has Meter</string>
    <string name="prompt_meter_number">Meter Number</string>
    <string name="prompt_has_well">Has Well</string>
    <string name="prompt_has_water">Has Water</string>
    <string name="button_deploy_customer">Submit Record</string>
    <string name="prompt_yes_value">Yes</string>
    <string name="prompt_no_value">No</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_account">Account number must be 5 or more characters</string>
    <string name="error_invalid_meter">Meter number must be 5 characters long</string>
    <string name="error_local_data_save">Could not save data</string>
    <string name="success_local_data_save">Data saved successfully</string>
    <string name="barcode_placeholder">{barcode}</string>
    <string name="barcode_empty_value"></string>
    <string name="prompt_bar_scan">Scan Ticket Number</string>
    <string name="button_scan_sticker">Scan Ticket</string>
    <string name="button_cancel_scanning">Cancel</string>
    <string name="operating">Scanning, wait..</string>
    <string name="operation_fail">Could not scan the barcode</string>
    <string name="barcode_title_text">{barcode}</string>
    <string name="failed_login">Invalid Port User or Password</string>

    <!-- Main page string values-->
    <string name="button_add_property_text">Add Property</string>
    <string name="prompt_operator_name">User:</string>
    <string name="prompt_empty_values">N/A</string>
    <string name="button_logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="passenger_not_found">N/A</string>
    <string name="ticket_not_found">N/A</string>

    <string name="company_invalid">TICKET NOT FOR ZANFAST</string>
    <string name="ticket_already_scanned">DO NOT ALLOW: (ALREADY ON BOARD)</string>
    <string name="ticket_not_for_this_route">DO NOT ALLOW: (NOT FOR THIS ROUTE)</string>
    <string name="ticket_cancelled">DO NOT ALLOW: (TICKET IS CANCELLED)</string>
    <string name="ticket_invalid">DO NOT ALLOW: (INVALID TICKET)</string>
    <string name="ticket_notfound">DO NOT ALLOW: (TICKET NOT FOUND)</string>
    <string name="ticket_valid"> ***ALLOW BOARDING***</string>
    <string name="time_invalid">DO NOT ALLOW: (NOT FOR THIS TIME)</string>
    <string name="date_invalid">DO NOT ALLOW: (NOT FOR THIS DATE)</string>
    <string name="route_invalid">DO NOT ALLOW: (NOT THIS ROUTE)</string>
    <string name="ticket_pending">TICKET NOT CONFIRMED</string>
    <string name="ticket_expired">TICKET EXPIRED</string>
    <string name="ticket_unknown">TICKET STATUS UKNOWN</string>
    <string name="scanned_tickets">SCANNED: {total}</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_change_route">Change Route</string>
    <string name="btn_change_mode">Change Mode</string>
    <string name="button_add_manual">Search Ticket</string>
    <string name="no_tickets_found">No available tickets</string>
    <string name="title_activity_camera_scanner">CameraScanner</string>

    <string name="title_activity_mode">Action to Perform</string>
    <string name="verification">2. Verification</string>
    <string name="verify">Verify</string>
    <string name="boarding">1. Boarding</string>
    <string name="select_mode">Select Activity</string>
    <string name="powered_by">Powered By</string>
    <string name="now_boarding">Now Boarding Route</string>
    <string name="now_verifing">Now Verifying Ticket</string>

    <string name="scanned"> *CHECKED WHEN BOARDING*</string>
    <string name="never_scanned"> NOT CHECKED </string>
    <string name="rahisi_solution">Rahisi Solution</string>
    <string name="select_route">Select Route</string>
    <string name="no_internet_connection">No internet connection, connect to internet to continue</string>

    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verification_success">Verification Successfully</string>
    <string name="ok">OK</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="operator_number">Enter Operator Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="session_expired">Session Expired</string>
    <string name="please_re_login_to_continue">Please login to continue</string>
</resources>
