<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ModeActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageViewBarcode"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="32dp"
            app:srcCompat="@drawable/zff_logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_mode"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_boarding"
            style="@style/button_login"
            android:layout_height="70dp"
            android:background="@drawable/button_validate_ticket"
            android:text="@string/boarding" />

        <Button
            android:id="@+id/btn_verify"
            style="@style/button_login"
            android:layout_height="70dp"
            android:background="@drawable/button_logout"
            android:text="@string/verification" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/powered_by"
            android:textAlignment="center"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/vendorLogo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/rahisi_logo" />


        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>