<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewBarcode"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                app:srcCompat="@drawable/zff_logo" />

            <EditText
                android:id="@+id/operator_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_user_name"
                android:inputType="number"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="#333"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/operator_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/prompt_user_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="#333"
                android:textSize="16dp" />

            <Button
                android:id="@+id/operator_sign_in_button"
                style="@style/button_login"
                android:layout_height="70dp"
                android:background="@drawable/button_validate_ticket"
                android:text="@string/action_sign_in" />

            <Button
                android:id="@+id/operator_forgot_password"
                style="@style/button_login"
                android:layout_height="70dp"
                android:background="@drawable/button_manual"
                android:text="@string/forgot_password" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Powered By"
                android:textAlignment="center"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/vendorLogo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/rahisi_logo" />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/version"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>