<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="260dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#386641">

    <ImageView
        android:id="@+id/session_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:src="@drawable/ic_round_motion_photos_pause_24" />

    <TextView
        android:id="@+id/session_expiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/session_expired"
        app:layout_constraintTop_toBottomOf="@id/session_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/relogin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_re_login_to_continue"
        app:layout_constraintTop_toBottomOf="@id/session_expiry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textSize="18sp"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/okay_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/relogin_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="13dp"
        android:textSize="20sp"
        android:text="@string/ok"
        android:textColor="#386641"
        android:fontFamily="@font/inter_medium" />

</androidx.constraintlayout.widget.ConstraintLayout>