<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--<ImageView
        android:id="@+id/imageViewBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/sample_barcode" />-->

    <TextView
        android:id="@+id/textViewTicketNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:padding="8dp"
        android:text="Result"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewPassengerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTicketNumber"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:padding="8dp"
        android:text="Result"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="25dp" />

    <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPassengerName"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonVerifyTicket"
            style="@style/button_validate_ticket"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_validate_ticket"
            android:text="@string/button_scan_sticker" />

        <Button
            android:id="@+id/buttonWriteManual"
            style="@style/button_ticket_manual"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_manual"
            android:text="@string/button_add_manual" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogout"
        style="@style/button_logout"
        android:layout_below="@id/button_holder"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_logout"
        android:text="@string/button_logout"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewOperatorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/prompt_operator_name"/>
    <TextView
        android:id="@+id/textViewOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text=""/>

    <TextView
        android:id="@+id/tv_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Unguja - Dar es Salaam"
        android:textAlignment="center"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:text="07:00"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="-25dp"
        android:layout_toStartOf="@+id/tv_time"
        android:text="18-01-2020"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_task_performed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/now_boarding"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>